  https://inter-mediator.info/ja/for-developers/migration.html

Ver.5.13-dev (in development)
- Our CI operations moved to GitHub Actions from Travis CI.
- [BUG FIX] If nodes bond to the local context exist in enclosure/repeater (ex. within table tag), Some error (1046)
  rose up. So far the error doesn't rise, but these nodes should exist out side of enclosure/repeater. (Thanks to Mr. Hayashi)

Ver.5.12 (May 29, 2021)
- Support PHP 8.0.
- Support handling Claris FileMaker's checkbox set feature on Post Only mode when using DB_FileMaker_DataAPI class or DB_FileMaker_FX class (Thanks to Mr. Masakatsu Inamoto).
- Update FMDataAPI.php (Ver.22) for Claris FileMaker Data API.
- Update deploy.sh and Vagrantfile etc. for the INTER-Mediator-Server VM (Update to Alpine Linux 3.13).
- [INFO] Drop support for PHP 5.2 and PHP 5.3.
- [INFO] Drop support for FileMaker Server 11, 12 and 13.
- [BUG FIX] Fix handling Claris FileMaker's checkbox set feature when using DB_FileMaker_DataAPI class (Thanks to Mr. Masakatsu Inamoto).

Ver.5.11 (November 17, 2019)
- Support FileMaker Data API of FileMaker Server 18 and FileMaker Cloud for AWS 1.18.
- Update FMDataAPI.php (Ver.20) and DB_FileMaker_DataAPI.php for FileMaker Data API.
- Improve handling Microsoft Office documents in MediaAccess class (Thanks to Mr. Takayoshi Wada).
- Reduce error messages when using PHP 7.x, DB_FileMaker_FX class and portal access mode.
- Improve stability of INTERMediatorLib.getParentRepeaters in some cases.
- Update deploy.sh and Vagrantfile etc. for the INTER-Mediator-Server VM (Update to Alpine Linux 3.10).

Ver.5.10 (April 17, 2019)
- The Japanese new gengo REIWA is supported in the date formatter.
- In the PDO connection string for MySQL uses host=localhost instead of unix_socket=.
- [BUG FIX] RSA parameters for phpseclib v2 are set as the correct description with const parameters.
- [BUG FIX] New LDAP user couldn't log in after Ver.5.8.
- [BUG FIX] New LDAP user required 2 log-in trial after Ver.5.2.