@@ -14,6 +14,7 @@ Ver.5.13-dev (in development)
 - Our CI operations moved to GitHub Actions from Travis CI.
 - [BUG FIX] If nodes bond to the local context exist in enclosure/repeater (ex. within table tag), Some error (1046)
   rose up. So far the error doesn't rise, but these nodes should exist out side of enclosure/repeater. (Thanks to Mr. Hayashi)
+- [BUG FIX] Fix GenerateJSCode.php to consider when "INTER-Mediator-Support" directory doesn't exist (Thanks to Tomomitsu Baba).
 
 Ver.5.12 (May 29, 2021)
 - Support PHP 8.0.
